<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar" />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/ress-auto"
        android:id="@+id/card_view1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="@dimen/margin_medium"
        card_view:cardCornerRadius="2dp" >

        <include
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/search_box" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/card_view3"
        android:layout_below="@+id/card_view1"
        android:layout_margin="@dimen/margin_medium"
        card_view:cardCornerRadius="2dp" >

        <ListView
            android:id="@+id/parcelList"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:divider="@color/alto"
            android:dividerHeight="1dp"
            android:scrollingCache="true" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/card_view4"
        android:layout_margin="@dimen/margin_medium"
        card_view:cardCornerRadius="2dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/apiHits"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/totalParcels"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_small"
        card_view:cardCornerRadius="2dp" >

        <TextView
            android:id="@+id/labelSortBy"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_medium"
            android:layout_marginLeft="0dp"
            android:layout_toRightOf="@+id/sortImage"
            android:drawableLeft="@drawable/ic_sort"
            android:gravity="center"
            android:text="@string/SortBy" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_small"
        android:layout_toRightOf="@+id/card_view4"
        card_view:cardCornerRadius="2dp" >

        <LinearLayout
            android:id="@+id/layout6"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_small"
                android:layout_weight="1"
                card_view:cardCornerRadius="2dp" >

                <TextView
                    android:id="@+id/labelValue"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_small"
                    android:layout_marginLeft="0dp"
                    android:layout_toRightOf="@+id/valueImage"
                    android:drawableLeft="@drawable/ic_value"
                    android:gravity="center"
                    android:text="@string/value" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_small"
                android:layout_weight="1"
                card_view:cardCornerRadius="2dp" >

                <TextView
                    android:id="@+id/labelWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_small"
                    android:layout_marginLeft="0dp"
                    android:layout_toRightOf="@+id/weightImage"
                    android:drawableLeft="@drawable/ic_weight"
                    android:gravity="center"
                    android:text="@string/weight" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>