<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar" />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/ress-auto"
        android:id="@+id/card_view1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="@dimen/margin_medium"
        card_view:cardCornerRadius="2dp" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@color/white" >

            <ImageView
                android:id="@+id/parcelImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_margin="10dp"
                android:contentDescription="@string/imageContentDescription" />

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/ress-auto"
                android:id="@+id/card_view2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:layout_toRightOf="@+id/parcelImage"
                card_view:cardCornerRadius="2dp" >

                <RelativeLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/parcelName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:background="@color/black"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_medium"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/parcelType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/parcelName"
                        android:layout_margin="@dimen/margin_small"
                        android:drawableLeft="@drawable/ic_type"
                        android:gravity="center" >
                    </TextView>

                    <TextView
                        android:id="@+id/parcelValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/parcelName"
                        android:layout_margin="@dimen/margin_small"
                        android:drawableLeft="@drawable/ic_value"
                        android:gravity="center" >
                    </TextView>

                    <TextView
                        android:id="@+id/parcelWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/parcelType"
                        android:layout_margin="@dimen/margin_small"
                        android:drawableLeft="@drawable/ic_weight"
                        android:gravity="center" >
                    </TextView>

                    <TextView
                        android:id="@+id/parcelQuantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/parcelType"
                        android:layout_margin="@dimen/margin_small"
                        android:drawableLeft="@drawable/ic_quantity"
                        android:gravity="center" >
                    </TextView>

                    <TextView
                        android:id="@+id/parcelPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/parcelWeight"
                        android:layout_margin="@dimen/margin_small"
                        android:drawableLeft="@drawable/ic_telephone"
                        android:gravity="center" >
                    </TextView>

                    <TextView
                        android:id="@+id/parcelColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/parcelPhone"
                        android:layout_alignParentRight="true"
                        android:layout_alignTop="@+id/parcelPhone"
                        android:layout_below="@+id/parcelWeight"
                        android:layout_margin="@dimen/margin_small"
                        android:background="@drawable/circlebackground"
                        android:gravity="center"
                        android:text="@string/color" >
                    </TextView>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_view1"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        card_view:cardCornerRadius="2dp" >

        <TextView
            android:id="@+id/labelCurrentLocation"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/currentLocation"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/card_view3"
        android:layout_margin="@dimen/margin_medium"
        android:layout_marginTop="0dp" />

    <ImageView
        android:id="@+id/refreshLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_view3"
        android:layout_margin="@dimen/margin_medium"
        android:contentDescription="@string/imageContentDescription"
        android:src="@drawable/ic_action_refresh" />

</RelativeLayout>